# mini-btc

./: Cargo.toml
data/blocks/: db
src/: block.rs  blockchain.rs  cli.rs  errors.rs  main.rs  server.rs  transaction.rs  tx.rs  utxoset.rs  wallets.rs
