[package]
name = "bitcoin-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoincash-addr = "0.5.2"
clap = "4.5.7"
env_logger = "0.11.3"
failure = "0.1.8"
lazy_static = "1.5.0"
log = "0.4.21"
merkle-cbt = "0.3.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
sled = "0.34.7"
